// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <CornerstoneImage /> should renders with all props correctly 1`] = `
<div
  id="dicomImage-0"
  style={
    Object {
      "height": "512px",
      "margin": "auto",
      "visibility": "visible",
      "width": "100%",
    }
  }
/>
`;

exports[`Component <CornerstoneImage /> should renders with all props correctly 2`] = `
<CornerstoneImage
  imageId="http://46.101.95.245/orthanc/instances/d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930/preview"
  index={0}
  instanceIds={
    Array [
      "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930/preview",
    ]
  }
  isVisibleCornerstone={true}
  visibleCornerstone={[Function]}
>
  <div
    id="dicomImage-0"
    style={
      Object {
        "height": "512px",
        "margin": "auto",
        "visibility": "visible",
        "width": "100%",
      }
    }
  />
</CornerstoneImage>
`;

exports[`Component <CornerstoneImage /> should renders with all props correctly 3`] = `
<CornerstoneImage
  imageId="http://46.101.95.245/orthanc/instances/d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930/preview"
  index={0}
  instanceIds={Array []}
  isVisibleCornerstone={true}
  visibleCornerstone={[Function]}
>
  <div
    id="dicomImage-0"
    style={
      Object {
        "height": "512px",
        "margin": "auto",
        "visibility": "visible",
        "width": "100%",
      }
    }
  />
</CornerstoneImage>
`;
